# circuits

./: .gitignore  .gitmodules  .prettierrc  CLAUDE.md  Cargo.toml  ECDSA_P256_ALL_TBS_BENCHMARK.md  ECDSA_P256_ALL_TBS_COMPLETE_BENCHMARK.md  ECDSA_P256_TBS_BENCHMARK_REPORT.md  LICENSE  Makefile  Nargo.toml  Prover.mock.toml  README.md  SECURITY.md  benchmark-all-tbs-results.json  bun.lockb  index.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
masterlist-interpreter/: Cargo.toml  csc-masterlist.json  index.ts
masterlist-interpreter/certificates/: ae_link_de383.cer  ar_root_de217.cer  at_link_de350.cer  at_link_de52.cer  at_root_de351.cer  at_root_de53.cer  au_link_de110.cer  au_link_de235.cer  au_link_de47.cer  au_root_de234.cer  bb_root_de372.cer  be_link_de344.cer  be_root_de155.cer  be_root_de177.cer  be_root_de256.cer  be_root_de354.cer  be_root_de388.cer  be_root_de96.cer  bg_link_de120.cer  bg_root_de328.cer  bg_root_de38.cer  br_root_de178.cer  bw_root_de332.cer  ch_link_de315.cer  ch_root_de179.cer  ch_root_de314.cer  ch_root_de44.cer  cn_link_de299.cer  cn_link_de329.cer  cn_link_de374.cer  cn_root_de121.cer  cn_root_de166.cer  cn_root_de297.cer  cn_root_de318.cer  cn_root_de75.cer  cn_root_de76.cer  cy_link_de195.cer  cy_link_de196.cer  cy_link_de399.cer  cy_root_de149.cer  (+158 more)
masterlist-interpreter/src/: main.rs
redc-param-gen/: Cargo.toml
scripts/: ci-compile-circuits.sh  ci-info-circuits.sh  delete-nargo-cache.sh  flamegraph.sh  generate-noir-timestamp-tests.py  info.sh  prove-honk.sh  prove-plonk.sh  (+2 more)
(+582 files in other folders)
