[package]
name = "masterlist-interpreter"
version = "0.1.0"

[dependencies]
noir-bignum-paramgen = "0.1.5"
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
x509-parser = "0.15.0"
serde_json = "1.0"
hex = "0.4"
asn1-rs = "0.5.2"